<resources>
    <string name="app_name">Yo\'l harakati qoidalari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yo_l_harakati_qoidalari">Yo’l harakati qoidalari</string>
    <string name="yo_l_belgilari">Yo’l belgilari</string>
    <string name="yoqtirganlar">Yoqtirganlar</string>
    <string name="biz_haqimizda">Biz haqimizda</string>
    <string name="bu_dastur_galereya_bilan_ishlashni_organish_ushun_yaratildi">Bu dastur \'Galereya\' bilan ishlashni organish ushun yaratildi!</string>
    <string name="copyright">Copyright © 2022 Shohrux Ravshanbekov</string>
    <string name="o_zgartirish">O\'zgartirish</string>
    <string name="o_chirish">O\'chirish</string>
    <string name="yo_l_belgisini_qo_shish">Yo’l belgisini qo’shish</string>
    <string name="yo_l_belgisini_ozgartirish">Yo’l belgisini ozgartirish</string>
    <string name="yo_l_belgisining_nomi">Yo’l belgisining nomi</string>
    <string name="yo_l_belgisining_to_liq_tarifi">Yo’l belgisining to’liq tarifi</string>
    <string name="saqlash">Saqlash</string>
    <string name="qaysi_turga_kirishi">Qaysi turga kirishi</string>
    <string name="yoq">Yoq</string>
    <string name="ha">Ha</string>
    <string name="ushbu_yo_l_belgisini_o_chirmoqchimisiz">Ushbu yo\'l belgisini o\'chirmoqchimisiz?</string>
</resources>